--- a/sass/modules/_vars.scss
+++ b/sass/modules/_vars.scss
@@ -5,4 +5,4 @@ $yellow-font-color: rgb(255, 210, 31); //yellow
 $light-green: rgb(200, 219, 164); //light green
 $light-grey: rgb(192, 182, 172);  //light grey
 $dark-grey: rgb(95, 94, 94);
-$font-stock: "Helvetica Neue", Avenir, sans-serif;
+$font-stock: 'Avenir', sans-serif;
