--- a/sass/modules/_web.scss
+++ b/sass/modules/_web.scss
@@ -5,12 +5,22 @@
 display:none !important;
 }
 
+.noweb
+{
+	display:none;
+}
+
+#checkbox
+	{
+		display:none;
+	}
+
 body
 {
   margin: 0;
   padding: 0;
   background-color: $main-app-color;
-  font-family: "Helvetica Neue", Avenir, sans-serif; /*change to sass*/
+  font-family: $font-stock; 
 }
 
 a
@@ -24,6 +34,7 @@ a:hover
 {
   color: $main-app-color;
   text-decoration: underline;
+  font-weight: bolder;
 }
 
 /*NAVIGATION*/
@@ -37,9 +48,9 @@ a:hover
   text-transform: uppercase;
   text-align: center;
   float: left;
-  width: 15%;
-  font-size: 60%;
-  padding-top: 25px;
+  width: 18%;
+  font-size: 80%;
+  padding-top: 70px;
 }
 
 
@@ -49,7 +60,7 @@ a:hover
 	background-color: black;
 	margin-top: -58%;
 	z-index: 1;
-	height: 60px;
+	height: 100px;
 	width: 100%;
 	text-align: center;
 }
@@ -73,345 +84,671 @@ position: relative;
 
 #header h1
 {
-color: $yellow-font-color;
+color:$yellow-font-color;
 position: absolute;
-top: 40%;
-font-size: 1200%; /*change with media queries*/
-margin-left: 20px;
+top: 20%;
+font-size: 1000%;
+margin-left: 3%;
 line-height: 135px;
-}
-
-
-
-
-
-
-
-
-/*MEET THE TEAM */
-#team
-{
-position: absolute;
--ms-transform: skewY(20deg);
--webkit-transform: skewY(20deg);
-transform: skewY(20deg);
 overflow: hidden;
-margin-top:-100px;
-z-index:-2;
+}
+
+#headerImg{
+	width: 100%;
 }
 
 
-#team span /*white line under meet the team*/
-{
-  display: block;
-  width: 100px;
-  height: 5px;
-  position: absolute;
-  top: 107%;
-  margin-left: 60%;
-  background: $main-app-color;
-}
 
-#team p
-{
-    color: $main-app-color;
-position: absolute;
-top: 60%;
-text-align: right;
-font-size: 120%; /*change with media queries*/
-margin-left: 10%;
--ms-transform: skewY(-20deg);
--webkit-transform: skewY(-20deg);
-transform: skewY(-20deg);
-padding-right: 10%;
-}
 
-.yellowLine
-{
 
-background: $yellow-font-color;
-width: 100%;
-height: 200px;
-position: absolute;
-margin-top:-18%;
-clear: both;
-}
 
-/*teamWeb*/
-#teamWeb
-{
-	width: 1280px;
-	clear: both;
-	overflow: hidden;
-	margin-bottom: 100px;
-}
 
-#teamImgWeb
-{
-  width: 640px;
-  height: auto;
-	float: left;
-	clear: both;
-}
 
-#teamWeb p
-{
-	float: right;
-	text-align: center;
-	width: 540px;
-	margin-right: 50px;
-	margin-left: 50px;
-	margin-top: 200px;
-	line-height: 40px;
-	font-size: 18px;
-	font-family: 'Avenir', sans-serif;
-}
+	
+	/*MEET THE TEAM */
 
-/*MEET TEAM*/
-#meetTeam
-{
-	width: 1280px;
-	height: 427px;
-	clear: both;
-	display: block;
-}
-
-/*ALLISON*/
-
-#alli
-{
-	display: block;
-	height: auto;
-	width: 640px;
-}
-
-.alliImg
-{
-
-width: 320px;
-height: auto;
-float: left;
-
-}
-
-#alliTitle
-{
-color: #000;
-text-align: center;
-font-size: 30px;
-}
-
-#alliBio
-{
-	color: black;
-  position: block;
-  text-align: center;
-	width: 320px;
-	float: left;
-}
-
-#alliBio p
+	#teamWeb
 	{
-		position: block;
+		width: 100%;
+		clear: both;
+		overflow: hidden;
+		margin-bottom: 100px;
+	}
+	
+	#teamImgWeb
+	{
+	  width: 50%;
+	  height: auto;
+		float: left;
+		clear: both;
+	}
+	
+	#teamWeb p
+	{
+		float: right;
 		text-align: center;
-		font-size: .9em;
+		width: 40%;
+		font-size: 1.2em;
+		padding: 5%;
+		font-family: $font-stock;
+	}
+
+	#theTeam p{
+		display:none;
 	}
 
 
-/*SORAYA*/
-
-#soraya
-{
-display: block;
-height: auto;
-float: left;
-width: 640px;
-}
-
-.sorayaImg
-{
-margin-top: -100px;
-margin-bottom: -200px;
-width: 320px;
-height: auto;
-float: left;
-
-}
-
-#sorayaTitle
-{
-color: #000;
-text-align: center;
-font-size: 30px;
-}
-
-#sorayaBio
-{
-	color: black;
-  position: block;
-  text-align: center;
-	width: 320px;
-	float: left;
-	margin-left: 320px;
-}
-
-#sorayaBio p
-{
-	position: block;
-	text-align: center;
-	font-size: .9em;
-	float: right;
-}
-	//QUOTE
+	#team
+	{
+		position: relative;
+		display: block;
+	}
+	
+	#team h1
+	{
+		color: $main-app-color;
+		text-align: center;
+		font-size: 2.4em; 
+		position: absolute;
+		background-color: $yellow-font-color;
+		width: 100%;
+		margin-top: 40%;
+		height: 125px;
+	}
 
 
+	#team h1 br{
+		display: none;
+	}
+	
+	#team span /*line under meet the team*/
+	{
+	  display: block;
+	  width: 10%;
+	  height: 5px;
+	  position: absolute;
+	  text-align: center;
+	  background: $main-app-color;
+	  margin-left: 45%;
+	  margin-right: 45%;
+
+	}
+
+	#theTeam
+	{
+		width: 100%;
+		text-align: center;
+	}
+	
+
+	
+	#team p
+	{
+		color: $dark-grey;
+		position: absolute;
+		text-align: center;
+		font-size: 120%; 
+		margin-left: 10%;
+		padding-right: 10%;
+		margin-top: 10%;
+	}
+	
+	
+	
+	/*ALLISON AND SORAYA*/
+	
+
+	.noweb
+	{
+		display: none;
+	}
+
+	.contents{
+		position:absolute;
+		height:100%;
+		width:100%; 
+		font-size: 1.0em;
+	}
+
+	.squares{
+		float:left;
+		position: relative;
+		width: 25%;
+		padding-bottom : 25%; 
+		background-color: $main-app-color;
+	}
+
+
+	.rss{
+		width:auto;
+		height:auto;
+		max-height:100%;
+		max-width:100%;
+	}
+
+
+	
+	
+	
+	/*SORAYA*/
+	
+		
+		
+		//QUOTE
+		
+		
 	#quote
 	{
-		background-color: $light-grey;
-	color: black;
-    position: relative;
-    margin-top: 400px;
-	height: 274px;
-	width: 1280px;
+		display:none;
 	}
-
-	#quote p
+		
+	
+	
+	
+		
+		
+		
+	
+	/*PORTFOLIO*/
+	
+	#portfolio
 	{
-	position: absolute;
-	text-align: center;
-	font-size: 2em;
-	color: $main-app-color;
-	width: 1280px;
-	float: right;
-	font-style: italic;
+		position: relative;
+		display: block;
+		width: 100%;
+		margin-top: 20%;
+		text-align: center;
+	}
+		
+	#portfolioText
+	{
+		color: $main-app-color;
+		position: absolute;
+		top: 60%;
+		text-align: center;
+		font-size: 3em;
+		width: 100%
+	}
+		
+	#portfolioAbout
+	{
+		height: 300px;
+		text-align: center;
+			
 	}
 
+	#portfolioText br{
+		display:none;
+	}
+		
+	#portfolioAbout p
+	{
+		text-align: center;
+		color: $dark-grey;
+		font-size: 1.8em;
+		padding-left: 10%;
+		padding-right: 10%;
+		width: 80%;
+		float: left;
+		margin-top: 7%;
+			
+	}
+		
+	//WEB DESIGN
+		
+	
+		#webDesign
+		{
+		background-color: $yellow-font-color;
+		display: block;
+		text-align: right;
+		height: 300px;
+		-ms-transform: skewY(-5deg);
+		-webkit-transform: skewY(-5deg);
+		transform: skewY(-5deg);
+		}
+		
+		#webDesign h2
+		{
+		color: $dark-grey; 
+		font-size: 2.4em;
+		padding: 20px;
+		text-align: right;
+		-ms-transform: skewY(5deg);
+		-webkit-transform: skewY(5deg);
+		transform: skewY(5deg);
+		}
+		
+		
+		#webDesign p{
+		color: $dark-grey; 
+		text-align:center;
+		font-size: 1.4em;
+		line-height: 1.3em;
+		-ms-transform: skewY(5deg);
+		-webkit-transform: skewY(5deg);
+		transform: skewY(5deg);
+		padding-left: 5%;
+		padding-right: 20%;
+		}
+		
+		
+		.webDesignImg
+		{
+		z-index: -1;
+		position: relative;
+		-ms-transform: skewY(5deg);
+		-webkit-transform: skewY(5deg);
+		transform: skewY(5deg);
+		width: 50%;
+		float: right;
+		margin-top: 15%;
 
+		}
+		
+		#webDesignText
+		{
+			position: relative;
+			display: block;
+			height: 300px;
+			width: 50%;
+			float: left;
+			margin-top: 5%;
+			z-index: -1;
+		}
+		
+		#webDesignText p
+		{
+			color: $dark-grey;
+			text-align: center;
+			font-size: 1.3em;
+			line-height: 1.2em;
+			padding: 3%;
 
+		}
+		
+		
+		
+		//Graphic Design
+		
+		#graphicDesign
+		{
+		background-color: $yellow-font-color;
+		display: block;
+		text-align: center;
+		height: 300px;
+		-ms-transform: skewY(5deg);
+		-webkit-transform: skewY(5deg);
+		transform: skewY(5deg);
+		margin-top:45%;
+		}
+		
+		#graphicDesign h2
+		{
+		color: $dark-grey; 
+		font-size: 2.4em;
+		margin-left: 5px;
+		padding-top: 5%;
+		text-align: center;
+		margin-top: 20%;
+		-ms-transform: skewY(-5deg);
+		-webkit-transform: skewY(-5deg);
+		transform: skewY(-5deg);
+		}
+		
+		
+		#graphicDesign p{
+		color: $dark-grey; 
+		text-align:center;
+		font-size: 1.4em;
+		line-height: 1.2em;
+		position:absolute;
+		display: block;
+		padding-right: 5%;
+		padding-left: 5%;
+		-ms-transform: skewY(-5deg);
+		-webkit-transform: skewY(-5deg);
+		transform: skewY(-5deg);
+		}
+		
+		//LightBox
+		
+		
+		#graphicDesignText
+		{
+			width: 100%;
+			background-color: $light-grey;
+			margin-top: 10%;
+		}
+	
+		#mi
+		{
+			margin-top: 8%;
+			cursor: pointer;
+		}
+	
+		#logotext1
+		{
+			background-color: $light-grey;
+			color: $main-app-color;
+			text-align: center;
+		}
+		
+		#seaStudios
+		{
+			margin-top: 8%;
+			cursor: pointer;
+		}
+	
+		#logotext2
+		{
+			background-color: $light-grey;
+			color: $main-app-color;
+			text-align: center;
+		}
+	
+		#seaStudios:hover
+	{
+		opacity: 0.8;
+	}
+	
+	#mi:hover
+	{
+		opacity: 0.8;
+	}
+	
+	.content
+	{
+		position:absolute;
+		height:100%;
+		width:100%; 
+		font-size: 1.6em;
+	}
+	
+	.content .rs{
+		width:auto;
+		height:auto;
+		max-height:100%;
+		max-width:100%;
+	}
+	
+	.square {
+		float:left;
+		position: relative;
+		width: 25%;
+		padding-bottom : 25%; 
+		background-color: $main-app-color;
+	}
+	
+		
+		
+	
+	
+	//modal
+	
+	
+	#myImg {
+		border-radius: 5px;
+		cursor: pointer;
+		transition: 0.3s;
+	}
+	
+	#myImg:hover {opacity: 0.7;}
+	
+	/* The Modal (background) */
+	.modal {
+		display: none;
+		position: fixed;
+		z-index: 1;
+		padding-top: 105px;
+		left: 0;
+		top: 0;
+		width: 100%;
+		height: 100%;
+		overflow: auto;
+		background-color: $dark-grey;
+		background-color: rgba(0,0,0,0.9);
+	}
+	
+	/* Modal Content (Image) */
+	.modal-content {
+		margin: auto;
+		display: block;
+		width: 30%;
+		max-width: 700px;
+	}
+	
+	/* Caption of Modal Image (Image Text) - Same Width as the Image */
+	#caption {
+		margin: auto;
+		display: block;
+		width: 80%;
+		max-width: 700px;
+		text-align: center;
+		color: #ccc;
+		padding: 10px 0;
+		height: 150px;
+	}
+	
+	/* Add Animation - Zoom in the Modal */
+	.modal-content, #caption 
+	{ 
+		-webkit-animation-name: zoom;
+		-webkit-animation-duration: 0.3s;
+		animation-name: zoom;
+		animation-duration: 0.3s;
+	}
+	
+	@-webkit-keyframes zoom {
+		from {
+			-webkit-transform:scale(0)
+			} 
+		to {
+			-webkit-transform:scale(1)
+			}
+	}
+	
+	@keyframes zoom {
+		from {
+			transform:scale(0)
+			} 
+		to {
+			transform:scale(1)
+			}
+	}
+	
+	
+	.close {
+		position: absolute;
+		text-decoration: underline;
+		top: 30px;
+		right: 50px;
+		color: #fff;
+		font-size: 20px;
+		font-weight: bold;
+		transition: 0.2s;
+	}
+	
+	.close:hover
+	{
+		color: #efefef;
+		text-decoration: none;
+		cursor: pointer;
+	}
+	
+	#lightbox
+	{
+		text-align: center;
+		padding-bottom: 15px;
+	}
+	
+	 .modal-content 
+	 {
+			width: 80%;
+	 }
+	 
+	
+	
+	/*PHOTOGRAPHY*/
+	#photography
+		{
+		background-color: $yellow-font-color;
+		height: 300px;
+		margin-top: 45%;
+		-ms-transform: skewY(-5deg);
+-webkit-transform: skewY(-5deg);
+transform: skewY(-5deg);
+		}
+		
+		#photography h2
+		{
+		color: $dark-grey; 
+		font-size: 2.4em;
+		margin-right: 20px;
+		text-align: center;
+		padding-top: 10%;
+		-ms-transform: skewY(5deg);
+-webkit-transform: skewY(5deg);
+transform: skewY(5deg);
+		}
+	
+		#photography p{
+			color: $dark-grey; 
+			text-align:center;
+			padding: 20px;
+			font-size: 1.4em;
+			line-height: 1.3em;
+			-ms-transform: skewY(5deg);
+			-webkit-transform: skewY(5deg);
+			transform: skewY(5deg);
+			}
+	
+		#photographyImgs{
+			cursor: pointer;
+		}
+	
+		#photographyImgs img:hover{
+			opacity: 0.7;
+		}
+	
+		/*CONTACT US*/
+	
+		#contact h2{
+			color: $main-app-color; 
+			text-align: center;
+			font-size: 2.4em;
+			margin-top: -50%;
+		}
+		
+		#contactForm
+		{
+			float: left;
+			letter-spacing: 0.5px;
+			font: 20px arial, sans-serif;
+			line-height: 3em;
+			padding: 10%;
+			width: 80%;
+			margin-top: 30%;
+		}
+	
+		#contactForm label
+		{
+			display: block;
+			color: $dark-grey;
+		}
+	
+		#submit{
+			color: $dark-grey;
+			padding: 5px;
+			border-radius: 6px;
+			background-color:$yellow-font-color;
+			width: 20% !important;
+			cursor: pointer;
+		}
+	
+		#contactForm input{
+			width: 100%;
+			height: 30px;
+		}
 
-/*PORTFOLIO*/
+		#comments{
+			width: 100%;
+		}
+	
+		/*FOOTER*/
+	
+	
+		#bottom{
+			background-color:$light-grey;
+			width: 100%;
+			height: 80px;
+			margin-top: 100%;
+		}
+	
+		
+	
+		footer img{
+			height: 50%;
+			margin-top: 20px;
+			margin-right: 15px;
+			float: right;
+			cursor: pointer;
+			filter: brightness(0) invert(1);
+		}
 
-
-.portfolioImg
-{
- width: 1280px;
- height: 671px;
- position: relative;
+		/*SLIDER*/
+	#imageContainer 
+{ 
+	width: 800px; 
+	height: 700px; 
+	margin: 0 auto; 
+	overflow: hidden; 
+	margin-top: 5%;
 }
 
-#portfolio
-{
-position: relative;
-display: block;
-width: 100%;
-margin-top: -100px;
-clear:both;
+#photoImages 
+{ 
+	position: relative; 
+	width: 10400px;
+	right: 0px;
+	transition: all 0s; 
+	-webkit-transition: all 0s;
+    -moz-transition: all 0s;
+    -o-transition: all 0s;
 }
 
-#portfolioText
-{
-color: $main-app-color;
-position: absolute;
-top: 30%;
-text-align: center;
-font-size: 3.4em;
-margin-left: 480px;
+#photoImages img 
+{ 
+	float: left; 
 }
 
-#portfolioAbout
+
+
+#next
 {
-	width: 1100px;
-	height: 300px;
-	clear: both;
-	padding-left: 90px;
-	padding-right: 90px;
-	text-align: center;
-	padding-top: 50px;
-	line-height: 35px;
-	font-family: 'Avenir', sans-serif;
+	float: right;
+	width: 40px;
+	background: #fff;
+	margin-right:20px;
+	cursor: pointer;
+	margin-top: -15%;
 }
 
-/*PORTFOLIO: Web Design*/
-#webDesign
+#previous
 {
-	width: 1280px;
-	overflow: hidden;
-}
-
-#webDesignText
-{
-	width: 40%; /*640px;*/
-	height: 640px;
-	font-size: 18px;
-	line-height: 35px;
-	text-align: center;
 	float: left;
-	padding-top: 200px;
-	padding-right: 5%;
-	padding-left: 5%;
+	width: 40px;
+	background: #fff;
+	margin-left:20px;
+	cursor: pointer;
+	margin-top: -15%;
 }
 
-#webDesignImg
+#slider
 {
-	width: 50%; /*640px;*/
-	float: left;
-	/*clear: both;*/
+	margin-top: 20px;
+	background: #000000;
 }
 
-#webDesignA
-{
-	background-color: $yellow-font-color;
-	height: 100px;
-	-ms-transform: skewY(-3deg); /* IE 9 */
-  -webkit-transform: skewY(-3deg); /* Safari */
-  transform: skewY(-3deg);
-	width:100%;
-}
-
-#webDesignA h2 p::first-letter
-{
-	-ms-transform: skewY(3deg); /* IE 9 */
-  -webkit-transform: skewY(3deg); /* Safari */
-  transform: skewY(3deg);
-}
-
-#webDesignA h2
-{
-	color: $light-grey;
-}
-
-#webDesign p:first-child
-{
-		color: $light-grey;
-}
-
-/*PORTFOLIO: GRAPHIC DESIGN*/
-
-#graphicDesign
-{
-	width: 100%;
-	display: inline-block;
-
-}
-
-.gdImg
-{
-	width: 320px;
-	height: 320px;
-	padding-top: 16px;
-	float: left;
-}
-
-.logoDesc p
-{
-	background-color: #C0B6AC;
-	width: 15%;
-	height: 200px;
-	float: left;
-	padding-top: 120px;
-	padding-right:5%;
-	padding-left: 5%;
-	text-align: center;
-	font-family: 'Avenir', sans-serif;
-}
+	
 }
