--- a/sass/modules/_web.scss
+++ b/sass/modules/_web.scss
@@ -107,6 +107,7 @@ overflow: hidden;
 	
 	/*MEET THE TEAM */
 
+
 	#teamWeb
 	{
 		width: 100%;
@@ -131,6 +132,7 @@ overflow: hidden;
 		font-size: 1.2em;
 		padding: 5%;
 		font-family: $font-stock;
+		padding-top: 135px;
 	}
 
 	#theTeam p{
@@ -154,6 +156,8 @@ overflow: hidden;
 		width: 100%;
 		margin-top: 40%;
 		height: 125px;
+		padding-top: 25px;
+		text-shadow: 1px 1px 3px $dark-grey;
 	}
 
 
@@ -192,7 +196,45 @@ overflow: hidden;
 		padding-right: 10%;
 		margin-top: 10%;
 	}
+
+	.contactBtn
+	{
+		margin: 0 auto;
+		text-align: center;
+		background-color: #FFD21F;
+		border: none;
+		margin: 75px;
+		margin-top: 90px;
+		color: #dark-grey;
+		font-weight: lighter;
+		font-size: 0.8em;
+		padding: 10px;
+		width: 100px;
+		height: 40px;
+
+	}
+
+	#teamBios p
+	{
+		color: $dark-grey;
+		padding-top: 65px;
+		width: 85%;
+		text-align: center;
+	}
 	
+	.squares
+	{
+		width: 320px;
+	}
+
+	.squares p
+	{
+		width: 90%;
+		margin: 0 auto;
+		text-align: center;
+		padding-left: 15px;
+
+	}
 	
 	
 	/*ALLISON AND SORAYA*/
@@ -285,7 +327,8 @@ overflow: hidden;
 	{
 		text-align: center;
 		color: $dark-grey;
-		font-size: 1.8em;
+		font-size: 1.5em;
+		line-height: 1.6em;
 		padding-left: 10%;
 		padding-right: 10%;
 		width: 80%;
@@ -323,7 +366,7 @@ overflow: hidden;
 		#webDesign p{
 		color: $dark-grey; 
 		text-align:center;
-		font-size: 1.4em;
+		font-size: 1.2em;
 		line-height: 1.3em;
 		-ms-transform: skewY(5deg);
 		-webkit-transform: skewY(5deg);
@@ -362,8 +405,8 @@ overflow: hidden;
 			color: $dark-grey;
 			text-align: center;
 			font-size: 1.3em;
-			line-height: 1.2em;
-			padding: 3%;
+			line-height: 1.5em;
+			padding: 10%;
 
 		}
 		
@@ -400,7 +443,7 @@ overflow: hidden;
 		#graphicDesign p{
 		color: $dark-grey; 
 		text-align:center;
-		font-size: 1.4em;
+		font-size: 1.2em;
 		line-height: 1.2em;
 		position:absolute;
 		display: block;
@@ -432,6 +475,11 @@ overflow: hidden;
 			background-color: $light-grey;
 			color: $main-app-color;
 			text-align: center;
+			height: 245px;
+			padding-top: 75px;
+			font-size: 1.3em;
+			margin-top: 26px;
+			
 		}
 		
 		#seaStudios
@@ -445,6 +493,11 @@ overflow: hidden;
 			background-color: $light-grey;
 			color: $main-app-color;
 			text-align: center;
+			height: 245px;
+			width: 100%;
+			padding-top: 75px;
+			font-size: 1.3em;
+			margin-top: 26px;
 		}
 	
 		#seaStudios:hover
@@ -651,7 +704,7 @@ transform: skewY(5deg);
 			color: $dark-grey; 
 			text-align:center;
 			padding: 20px;
-			font-size: 1.4em;
+			font-size: 1.2em;
 			line-height: 1.3em;
 			-ms-transform: skewY(5deg);
 			-webkit-transform: skewY(5deg);
